@@ -1,3 +1,8 @@
+2005-01-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* elf64-sparc.c (sparc64_elf_relocate_section): Ignore overflows
+	from STABS debugging sections again.
+
 2004-10-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elflink.c (elf_link_add_object_symbols): Also clear
